--- a/app/templates/app/build.gradle
+++ b/app/templates/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.example.gramian.androidtest"
+        applicationId "com.example.app"
         minSdkVersion 14
         targetSdkVersion 23
         versionCode 1
@@ -21,7 +21,12 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    //tests
     testCompile 'junit:junit:4.12'
+
+
+    // instrumentation tests
+
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.android.support:design:23.0.1'
     compile 'com.google.code.gson:gson:2.3'
