added example instrumentation and unit test and made necessary gradle adjustments, added vector support gradle options

--- a/app/templates/app/build.gradle
+++ b/app/templates/app/build.gradle
@@ -10,12 +10,29 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
+        vectorDrawables.useSupportLibrary = true
+        generatedDensities = []
     }
+
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        debug {
+            minifyEnabled false
+            applicationIdSuffix '.debug'
+        }
+    }
+
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
+
+    aaptOptions {
+        additionalParameters "--no-version-vectors"
     }
 }
 
