added yeoman-generator as keyword in package.json so it is properly recognized through nom

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "git+https://agramian@github.com/agramian/generator-android.git"
   },
   "keywords": [
-    "yeoman",
+    "yeoman-generator",
     "android",
     "scaffold"
   ],
