made it a scoped npm package since generator-android already exists

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "generator-android",
+  "name": "@agramian/generator-android",
   "version": "0.1.0",
   "description": "Android Yeoman generator",
   "repository": {
