--- a/generators/app/templates/app/build.gradle
+++ b/generators/app/templates/app/build.gradle
@@ -1,13 +1,14 @@
 apply plugin: 'com.android.application'
+apply plugin: 'android-apt'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 24
+    buildToolsVersion "24.0.3"
 
     defaultConfig {
         applicationId "com.example.app"
         minSdkVersion 14
-        targetSdkVersion 23
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -38,23 +39,32 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    // dependency version declarations for interpolation
+    def supportLibVer = '24.2.0'
+    def supportTestLibVer = '0.5'
+    def retrofitLibVer = '2.0.2'
+    def okhttpLibVer = '3.3.1'
+    def butterknifeLibVer = '8.4.0'
+    def gsonLibVer = '2.4'
 
     // tests
-    testCompile 'junit:junit:4.12'
-    testCompile 'org.assertj:assertj-core:1.7.1'
-    testCompile 'org.mockito:mockito-core:1.10.19'
-    testCompile 'org.robolectric:robolectric:3.0'
+    testCompile "junit:junit:4.12"
+    testCompile "org.assertj:assertj-core:1.7.1"
+    testCompile "org.mockito:mockito-core:1.10.19"
+    testCompile "org.robolectric:robolectric:3.0"
 
     // instrumentation tests
-    androidTestCompile 'com.android.support.test:runner:0.4.1'
-    androidTestCompile 'com.android.support.test:rules:0.4.1'
-    androidTestCompile 'com.android.support:support-annotations:23.4.0'
+    androidTestCompile "com.android.support.test:runner:${supportTestLibVer}"
+    androidTestCompile "com.android.support.test:rules:${supportTestLibVer}"
+    androidTestCompile "com.android.support:support-annotations:${supportLibVer}"
 
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:design:23.4.0'
-    compile 'com.google.code.gson:gson:2.3'
-    compile 'com.squareup.retrofit2:retrofit:2.0.2'
-    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
-    compile 'com.squareup.okhttp3:okhttp:3.3.1'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
+    compile "com.android.support:appcompat-v7:${supportLibVer}"
+    compile "com.android.support:design:${supportLibVer}"
+    compile "com.google.code.gson:gson:${gsonLibVer}"
+    compile "com.squareup.retrofit2:retrofit:${retrofitLibVer}"
+    compile "com.squareup.retrofit2:converter-gson:${retrofitLibVer}"
+    compile "com.squareup.okhttp3:okhttp:${okhttpLibVer}"
+    compile "com.squareup.okhttp3:logging-interceptor:${okhttpLibVer}"
+    compile "com.jakewharton:butterknife:${butterknifeLibVer}"
+    apt "com.jakewharton:butterknife-compiler:${butterknifeLibVer}"
 }
