--- a/generators/app/templates/keystore.properties
+++ b/generators/app/templates/keystore.properties
@@ -1,4 +1,4 @@
-keyAlias=Key
+keyAlias=Keystore
 keyPassword=CHANGEME
-storeFile=keystore/keystore.jks
+storeFile=keystore/android.jks
 storePassword=CHANGEME
