--- a/generators/app/templates/app/build.gradle
+++ b/generators/app/templates/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     def okhttpLibVer = '3.3.1'
     def butterknifeLibVer = '8.4.0'
     def gsonLibVer = '2.4'
+    def leakcanaryLibVer = '1.5'
 
     // tests
     testCompile "junit:junit:4.12"
@@ -86,4 +87,9 @@ dependencies {
     compile "com.squareup.okhttp3:logging-interceptor:${okhttpLibVer}"
     compile "com.jakewharton:butterknife:${butterknifeLibVer}"
     apt "com.jakewharton:butterknife-compiler:${butterknifeLibVer}"
+
+    // leak canary
+    debugCompile "com.squareup.leakcanary:leakcanary-android:${leakcanaryLibVer}"
+    releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:${leakcanaryLibVer}"
+    testCompile "com.squareup.leakcanary:leakcanary-android-no-op:${leakcanaryLibVer}"
 }
