--- a/generators/app/templates/app/build.gradle
+++ b/generators/app/templates/app/build.gradle
@@ -11,6 +11,8 @@ def keystoreProperties = new Properties()
 // Load your keystore.properties file into the keystoreProperties object.
 keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
+def releasePhase = "alpha"
+
 android {
     signingConfigs {
         config {
@@ -20,19 +22,18 @@ android {
             storePassword keystoreProperties['storePassword']
         }
     }
-    compileSdkVersion 24
-    buildToolsVersion "24.0.3"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.0"
 
     defaultConfig {
         applicationId "<%= app_id %>"
         minSdkVersion 14
-        targetSdkVersion 24
+        targetSdkVersion 25
         versionCode 1
-        versionName "1.0"
+        versionName "0.1.0-${releasePhase}+${versionCode}"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
-        generatedDensities = []
     }
 
     buildTypes {
@@ -59,19 +60,23 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     // dependency version declarations for interpolation
-    def supportLibVer = '24.2.0'
+    def supportLibVer = '25.0.1'
     def supportTestLibVer = '0.5'
-    def retrofitLibVer = '2.0.2'
+    def retrofitLibVer = '2.1.0'
     def okhttpLibVer = '3.3.1'
     def butterknifeLibVer = '8.4.0'
-    def gsonLibVer = '2.4'
+    def gsonLibVer = '2.8.0'
     def leakcanaryLibVer = '1.5'
+    def junitLibVer = '4.12'
+    def assertJLibVer = '1.7.1'
+    def mockitoLibVer = '1.10.19'
+    def roboelectricLibVer = '3.1.4'
 
     // tests
-    testCompile "junit:junit:4.12"
-    testCompile "org.assertj:assertj-core:1.7.1"
-    testCompile "org.mockito:mockito-core:1.10.19"
-    testCompile "org.robolectric:robolectric:3.0"
+    testCompile "junit:junit:${junitLibVer}"
+    testCompile "org.assertj:assertj-core:${assertJLibVer}"
+    testCompile "org.mockito:mockito-core:${mockitoLibVer}"
+    testCompile "org.robolectric:robolectric:${roboelectricLibVer}"
 
     // instrumentation tests
     androidTestCompile "com.android.support.test:runner:${supportTestLibVer}"
