--- a/generators/app/templates/dynamic/app_build.gradle
+++ b/generators/app/templates/dynamic/app_build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-apply plugin: 'android-apt'
+apply plugin: 'me.tatarka.retrolambda'
 
 // Create a variable called keystorePropertiesFile, and initialize it to your
 // keystore.properties file, in the rootProject folder.
@@ -55,6 +55,11 @@ android {
     aaptOptions {
         additionalParameters "--no-version-vectors"
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -102,7 +107,7 @@ dependencies {
 
     // buterknife
     compile "com.jakewharton:butterknife:${butterknifeLibVer}"
-    apt "com.jakewharton:butterknife-compiler:${butterknifeLibVer}"
+    annotationProcessor "com.jakewharton:butterknife-compiler:${butterknifeLibVer}"
 
     // leak canary
     debugCompile "com.squareup.leakcanary:leakcanary-android:${leakcanaryLibVer}"
