--- a/generators/app/templates/dynamic/AndroidManifest.xml
+++ b/generators/app/templates/dynamic/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="<%= app_id %>" >
+          package="<%= app_id %>" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -26,8 +26,13 @@
         </activity>
 
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
+            android:name=".StartActivity"
+            android:label="@string/start"
+            android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity
+            android:name=".HomeActivity"
+            android:label="@string/home"
             android:theme="@style/AppTheme.NoActionBar" />
 
     </application>
