--- a/generators/app/templates/dynamic/app_build.gradle
+++ b/generators/app/templates/dynamic/app_build.gradle
@@ -80,6 +80,8 @@ dependencies {
     def rxjavaLibVer = '2.0.1'
     def glideLibVer = '3.7.0'
     def glideOkHttpLibVer = '1.4.0'
+    def daggerLibVer = '2.7'
+    def esperandroLibVer = '2.2.0'
 
     // unit tests
     testCompile "junit:junit:${junitLibVer}"
@@ -123,4 +125,13 @@ dependencies {
     // glide
     compile "com.github.bumptech.glide:glide:${glideLibVer}"
     compile "com.github.bumptech.glide:okhttp3-integration:${glideOkHttpLibVer}@aar"
+
+    // dagger
+    compile "com.google.dagger:dagger:${daggerLibVer}"
+    annotationProcessor "com.google.dagger:dagger-compiler:${daggerLibVer}"
+
+    // esperandro shared preference engine
+    compile "de.devland.esperandro:esperandro-api:${esperandroLibVer}"
+    annotationProcessor "de.devland.esperandro:esperandro:${esperandroLibVer}"
+    compile "de.devland.esperandro:esperandro-gson-addon:${esperandroLibVer}"
 }
