--- a/generators/app/templates/dynamic/app_build.gradle
+++ b/generators/app/templates/dynamic/app_build.gradle
@@ -32,19 +32,48 @@ android {
         versionCode 1
         versionName "0.1.0-${releasePhase}+${versionCode}"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
     }
 
     buildTypes {
         release {
             minifyEnabled true
+            useProguard true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            testProguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguardTest-rules.pro'
             signingConfig signingConfigs.config
         }
         debug {
-            minifyEnabled false
+            minifyEnabled true
+            useProguard false
             applicationIdSuffix '.debug'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            testProguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguardTest-rules.pro'
+        }
+    }
+
+    // If you need to add more flavors, consider using flavor dimensions.
+    productFlavors {
+        mock {
+            applicationIdSuffix = ".mock"
+        }
+        prod {
+
+        }
+    }
+
+    // Remove mockRelease as it's not needed.
+    android.variantFilter { variant ->
+        if(variant.buildType.name.equals('release')
+                && variant.getFlavors().get(0).name.equals('mock')) {
+            variant.setIgnore(true);
+        }
+    }
+
+    // Always show the result of every unit test, even if it passes.
+    testOptions.unitTests.all {
+        testLogging {
+            events 'passed', 'skipped', 'failed', 'standardOut', 'standardError'
         }
     }
 
@@ -75,7 +104,9 @@ dependencies {
     def junitLibVer = '4.12'
     def assertJLibVer = '1.7.1'
     def mockitoLibVer = '1.10.19'
-    def roboelectricLibVer = '3.1.4'
+    def hamcrestLibVer = '1.3'
+    def espressoLibVer = '2.2.2'
+    def dexmakerLibVer = '1.2'
     def rxandroidLibVer = '2.0.1'
     def rxjavaLibVer = '2.0.1'
     def glideLibVer = '3.7.0'
@@ -83,55 +114,84 @@ dependencies {
     def daggerLibVer = '2.7'
     def esperandroLibVer = '2.2.0'
 
-    // unit tests
-    testCompile "junit:junit:${junitLibVer}"
-    testCompile "org.assertj:assertj-core:${assertJLibVer}"
-    testCompile "org.mockito:mockito-core:${mockitoLibVer}"
-    testCompile "org.robolectric:robolectric:${roboelectricLibVer}"
+    // local unit tests
+    testCompile "junit:junit:$junitLibVer"
+    testCompile "org.assertj:assertj-core:$assertJLibVer"
+    testCompile "org.mockito:mockito-all:$mockitoLibVer"
+    testCompile "org.hamcrest:hamcrest-all:$hamcrestLibVer"
 
-    // instrumentation tests
-    androidTestCompile "com.android.support.test:runner:${supportTestLibVer}"
-    androidTestCompile "com.android.support.test:rules:${supportTestLibVer}"
-    androidTestCompile "com.android.support:support-annotations:${supportLibVer}"
+    // android testing support library's runner and rules
+    androidTestCompile "com.android.support.test:runner:$supportTestLibVer"
+    androidTestCompile "com.android.support.test:rules:$supportTestLibVer"
+    androidTestCompile "com.android.support:support-annotations:$supportLibVer"
+
+    // android unit tests
+    androidTestCompile "junit:junit:$junitLibVer"
+    androidTestCompile "org.mockito:mockito-core:$mockitoLibVer"
+    androidTestCompile "com.google.dexmaker:dexmaker:$dexmakerLibVer"
+    androidTestCompile "com.google.dexmaker:dexmaker-mockito:$dexmakerLibVer"
+
+    // espresso ui tests
+    androidTestCompile("com.android.support.test.espresso:espresso-core:$espressoLibVer") {
+        exclude module: 'support-annotations'
+        exclude module: 'recyclerview-v7'
+        exclude module: 'support-v4'
+        exclude module: 'appcompat-v7'
+        exclude module: 'design'
+    }
+    androidTestCompile("com.android.support.test.espresso:espresso-contrib:$espressoLibVer") {
+        exclude module: 'support-annotations'
+        exclude module: 'recyclerview-v7'
+        exclude module: 'support-v4'
+        exclude module: 'appcompat-v7'
+        exclude module: 'design'
+    }
+    androidTestCompile("com.android.support.test.espresso:espresso-intents:$espressoLibVer") {
+        exclude module: 'support-annotations'
+        exclude module: 'recyclerview-v7'
+        exclude module: 'support-v4'
+        exclude module: 'appcompat-v7'
+        exclude module: 'design'
+    }
 
     // android support
-    compile "com.android.support:appcompat-v7:${supportLibVer}"
-    compile "com.android.support:design:${supportLibVer}"
+    compile "com.android.support:appcompat-v7:$supportLibVer"
+    compile "com.android.support:design:$supportLibVer"
 
     // gson
-    compile "com.google.code.gson:gson:${gsonLibVer}"
+    compile "com.google.code.gson:gson:$gsonLibVer"
 
     // retrofit
-    compile "com.squareup.retrofit2:retrofit:${retrofitLibVer}"
-    compile "com.squareup.retrofit2:converter-gson:${retrofitLibVer}"
+    compile "com.squareup.retrofit2:retrofit:$retrofitLibVer"
+    compile "com.squareup.retrofit2:converter-gson:$retrofitLibVer"
 
     // okhttp
-    compile "com.squareup.okhttp3:okhttp:${okhttpLibVer}"
-    compile "com.squareup.okhttp3:logging-interceptor:${okhttpLibVer}"
+    compile "com.squareup.okhttp3:okhttp:$okhttpLibVer"
+    compile "com.squareup.okhttp3:logging-interceptor:$okhttpLibVer"
 
     // buterknife
-    compile "com.jakewharton:butterknife:${butterknifeLibVer}"
-    annotationProcessor "com.jakewharton:butterknife-compiler:${butterknifeLibVer}"
+    compile "com.jakewharton:butterknife:$butterknifeLibVer"
+    annotationProcessor "com.jakewharton:butterknife-compiler:$butterknifeLibVer"
 
     // leak canary
-    debugCompile "com.squareup.leakcanary:leakcanary-android:${leakcanaryLibVer}"
-    releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:${leakcanaryLibVer}"
-    testCompile "com.squareup.leakcanary:leakcanary-android-no-op:${leakcanaryLibVer}"
+    debugCompile "com.squareup.leakcanary:leakcanary-android:$leakcanaryLibVer"
+    releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:$leakcanaryLibVer"
+    testCompile "com.squareup.leakcanary:leakcanary-android-no-op:$leakcanaryLibVer"
 
     // reactive extensions for android and java
-    compile "io.reactivex.rxjava2:rxandroid:${rxandroidLibVer}"
-    compile "io.reactivex.rxjava2:rxjava:${rxjavaLibVer}"
+    compile "io.reactivex.rxjava2:rxandroid:$rxandroidLibVer"
+    compile "io.reactivex.rxjava2:rxjava:$rxjavaLibVer"
 
     // glide
-    compile "com.github.bumptech.glide:glide:${glideLibVer}"
-    compile "com.github.bumptech.glide:okhttp3-integration:${glideOkHttpLibVer}@aar"
+    compile "com.github.bumptech.glide:glide:$glideLibVer"
+    compile "com.github.bumptech.glide:okhttp3-integration:$glideOkHttpLibVer@aar"
 
     // dagger
-    compile "com.google.dagger:dagger:${daggerLibVer}"
-    annotationProcessor "com.google.dagger:dagger-compiler:${daggerLibVer}"
+    compile "com.google.dagger:dagger:$daggerLibVer"
+    annotationProcessor "com.google.dagger:dagger-compiler:$daggerLibVer"
 
     // esperandro shared preference engine
-    compile "de.devland.esperandro:esperandro-api:${esperandroLibVer}"
-    annotationProcessor "de.devland.esperandro:esperandro:${esperandroLibVer}"
-    compile "de.devland.esperandro:esperandro-gson-addon:${esperandroLibVer}"
+    compile "de.devland.esperandro:esperandro-api:$esperandroLibVer"
+    annotationProcessor "de.devland.esperandro:esperandro:$esperandroLibVer"
+    compile "de.devland.esperandro:esperandro-gson-addon:$esperandroLibVer"
 }
